syntax = "proto3";
package proto;

message NLPSentenceRequest {
    string time = 1;
    string message = 2;
    repeated TokenizedSentence previousContext = 3;
}

message TokenizedSentence {
    repeated string word = 1;
}

message AssistantMessage {
    string sentence = 1;
}

message NLPSentenceResponse {
    bytes fact = 1;
    repeated string tokens = 2;
}

service Assistant {
    rpc SentenceProcess(NLPSentenceRequest) returns (NLPSentenceResponse);
}
